<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PencilSlalom</string>
	
	<string name="nothing"></string>
    
	<string name="tutorial">Tutorial</string>
	<string name="career">Career</string>
	<string name="multiplayer">Multiplayer</string>
	
	<string name="mp_playersCount">Players count: </string>
	<string name="mp_mode">Mode: </string>
	<string name="mp_track">Track: </string>
	<string name="mp_playerName">Name: </string>
	<string name="mp_playerSki">Ski: </string>
	<string name="mp_playerType">Type: </string>
	<string name="mp_playerCountry">Country: </string>
	<string name="mp_start">START</string>
	
	<string name="race_startNext">Start run</string>
	<string name="race_eventFinished">Proceed</string>	
	<string name="race_headRank">Rank</string>
	<string name="race_headCountry">Country</string>
	<string name="race_headName">Skier</string>
	<string name="race_headRuns">Runs</string>
	<string name="race_headTurns">Turns</string>
	<string name="race_headTime">Time</string>
	<string name="race_headPoints">Points</string>
	<!--string name="race_Finished">Finished</string-->
	<string name="race_Next">Starts next: %1$s (run %2$d)</string>	
	<string name="race_Winner">Winner: %1$s</string>	
	<string name="race_notStarted">DNS</string>	
	<string name="race_notFinished">DNF</string>	
	
	<string name="mp_gameExists">Do you wish to continue existing multiplayer game?</string>
	<string name="mp_continue">Continue</string>
	<string name="mp_new">Create new</string>
	<string name="mp_cancel">Cancel</string>
	
	<string name="flag_start">START</string>
	<string name="flag_finish">FINISH</string>
	<string name="flag_go">GO!</string>
	
	<string name="status_start">Start</string>
	<string name="status_race">Racing</string>
	<string name="status_failed">Failed</string>
	<string name="status_finished">Finished</string>
	<string name="status_gates">Gates passed: </string>
	<string name="status_turns">Turns: </string>
	<string name="status_time">Time: </string>
	
	<string name="mp_modeTurns">Turns</string>
	<string name="mp_modeTime">Time</string>
	
	<!--string name="UA_full">Ukraine</string>
	<string name="AUT_full">Austria</string-->
	
	<string name="run_complete1">Run complete (%1$s)</string>	
	<string name="run_complete3">Turns: %1$d</string>	
	<string name="run_complete4">Time: %1$s</string>	
	<string name="run_completeContinue">Continue</string>	

	<string name="run_back">Are you sure you want to give up the run?</string>	
	<string name="run_backyes">Give up</string>	
	<string name="run_backno">Continue race</string>
	
	<string name="careersetup_name">Name:</string>
	<string name="careersetup_lastName">Last name:</string>
	<string name="careersetup_country">Country:</string>
	<string name="careersetup_start">Start career</string>
	
	<string name="career_startTitle">Hi, %1$s</string>
	<string name="career_startMessage">You have no money, no experience and beginner skis. In the course of game you will win money to buy a new equipment and experience points to improve your skiing skills. Good luck in becoming the Champion!</string>
	
	<string name="career_Money">Money: %1$d</string>
	<string name="career_Experience">Experience: %1$d</string>
	
	<string name="career_tabExperience">Experience</string>
	<string name="career_tabSki">Ski</string>
	<string name="career_tabEvents">Events</string>
	
	<string name="career_exp_nextLevel">Experience for next level: %1$s (Level %2$s)</string>
	<string name="career_evt_locked">LOCKED</string>
	<string name="career_evt_locked_expl">Event is locked</string>
	
	<string name="message_ok">Ok</string>
	
	<string name="evt_au_quali1_name">Local club skiing</string>
	<string name="evt_au_quali1_desc">Skiing day in a local club. Improve results to qualify for real challenges.</string>
	<string name="evt_au_quali1_locked">This event is always available.</string>
	
	<string name="evt_au_champ1_name">Local club champ</string>
	<string name="evt_au_champ1_desc">Small local championship. No entry fee.</string>
	<string name="evt_au_champ1_locked">Finish qualification in 18 or less turns</string>
	
	<string name="new_record">New record for:</string>
	<string name="new_record_comp">New best result for %1$s: place %2$s!</string>
	
	<string name="slope_train_first">Short training course</string>
	<string name="slope_train_tramplin">Tramplin training course</string>
	<string name="slope_train_slalom">Slalom training course</string>
	<string name="slope_at_hww">Hohe Wand Wiese</string>
	
</resources>
